--- a/api/src/GymTracker.API/GymTracker.API.csproj
+++ b/api/src/GymTracker.API/GymTracker.API.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\GymTracker.Infrastructure\GymTracker.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="logs\" />
+  </ItemGroup>
+
 </Project>
