--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.9'
 services:
   sql_server:
     image: mcr.microsoft.com/mssql/server:2019-latest
@@ -10,6 +9,7 @@ services:
     ports:
       - "1433:1433"
     volumes:
+      - sqlserver-data:/var/opt/mssql
       - ./init-db:/init-db
       - ./entrypoint.sh:/docker-entrypoint-initdb.d/entrypoint.sh
     networks:
@@ -20,7 +20,7 @@ services:
       timeout: 10s
       retries: 10
 
-  gymtracker:
+  backend:
     build:
       context: .
       dockerfile: api/Dockerfile
@@ -28,7 +28,7 @@ services:
       sql_server:
         condition: service_healthy
     environment:
-      - ASPNETCORE_ENVIRONMENT=Production
+      - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Server=sql_server;Database=GymTrackerDb;User Id=sa;Password=YourPassword123;Encrypt=False;TrustServerCertificate=True;
     ports:
       - "80:5000"
@@ -36,14 +36,17 @@ services:
       - fitness-tracker-network
     entrypoint: /bin/bash -c "while ! /opt/mssql-tools/bin/sqlcmd -S sql_server -U sa -P YourPassword123 -Q 'SELECT 1' &> /dev/null; do echo waiting for sql_server; sleep 5; done; dotnet GymTracker.API.dll"
 
-  angular:
+  frontend:
     build:
       context: frontend
-      dockerfile: Dockerfile  # Path to your Angular Dockerfile
+      dockerfile: Dockerfile
     ports:
-      - "8080:8080"  # Host port 8080 mapped to container port 8080
+      - "8080:8080"
     networks:
       - fitness-tracker-network
 
 networks:
   fitness-tracker-network:
+
+volumes:
+  sqlserver-data:
